build+ci+docs: correct CDK api scope, gate the equivalence harness, fix freeze rule
Fixes from a fresh deep audit, all verified:

build: cdk-core is internal-only (PeriodicTable), so demote it to implementation;
cdk-interfaces alone carries every public-API type (IAtom/IAtomContainer/CDKException
and, transitively, javax.vecmath Point3d) and stays api. Correct the comment that
wrongly placed CDKException in cdk-core. Parse -PjavaToolchain's leading major so a
dotted version (e.g. 21.0.1) no longer throws.

ci: add a full-suite (-PallTests) job running the DevSurfaceV* ladder + cross-variant
equivalence harness. The default test scope excludes these, so the project's central
bit-exactness guarantee was previously CI-unverified.

CLAUDE.md: replace the broken freeze-classification heuristic ('has a perf-doc row',
which false-negatives the wired-in strategy classes) with an explicit construct/method-ref
closure rule, and name the editable seam interfaces. Note CI now runs the full suite; fix
the commit-convention example (colon, not em-dash).

README: add a zero-copy PackedSurfaceAccess usage example and a note that the consumer's
JVM needs --add-modules jdk.incubator.vector for the SIMD path; document
DistinctFasterNumericalSurface; correct the ~5.7x->~5.7-6x duplicate factor and the
cobalt NPE detail.

test: golden regeneration writes to the build-forwarded resources dir (-Dgolden.resourcesDir),
so it no longer depends on the test working directory.

.claude: allow safe read-only git/gh verbs (fetch/remote/rev-parse/blame, gh pr diff, gh api).